--- a/example/package.json
+++ b/example/package.json
@@ -28,5 +28,8 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "17.0.1"
+  },
+  "resolutions": {
+    "react-devtools-core": "4.14.0"
   }
 }
